# libvegas

./: .gitignore  LICENCE  README.md  go.work  go.work.sum
.github/workflows/: build.yml
cpppoc/: .gitignore  CMakeLists.txt  bootstrap.sh  consumer.h  consumer.hpp  producer.cpp  producer.h  producer.hpp  vegas.cpp  vegas.h
lang/python/: LICENCE  pyproject.toml
lang/python/src/libvegas/: binding.py
samples/basic/: go.mod  go.sum  main.go
samples/c/: main.c
samples/python/: consumer.py  producer.py  propagation_delay.py  requirements.txt
src/: Makefile  consumer.go  filters.go  go.mod  go.sum  producer.go  shard_map.go  shard_reader.go  shard_writer.go  subscription_manager.go
src/interop/: bridge.go  interop.go
src/kvs/: in_memory_log.go  in_memory_state.go  node.go  node_test.go
src/kvs/pb/: messages.proto
src/lib/: consumer.go  filters.go  leader.go  manager.go  producer.go  shard_map.go  shard_reader.go  shard_writer.go  subscription_manager.go
src/lib/kvs/: in_memory_log.go  in_memory_state.go  node.go  node_test.go  test_peer.go
src/lib/kvs/pb/: messages.pb.go  messages.proto
src/lib/pb/: messages.pb.go  messages.proto
src/pb/: messages.proto
src/pb/pb/: messages.pb.go
