[tool.poetry]
name = "pebble"
version = "0.3.5"
description = "Stream processing library"
authors = ["Buddhike de Silva <buddhiks@amazon.com>"]
license = "MIT"
include = [
    { path = "src/pebble/libs/*.so", format = "wheel" }
]

[tool.poetry.dependencies]
python = "^3.0"
cffi = "1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
